@@ -1,3 +1,9 @@
+2009-11-20  Jaroslav Hajek  <highegg@gmail.com>
+
+	* script/miscellaneous/getfield: Deblank field names, gripe on invalid
+	index.
+	* script/miscellaneous/setfield: Rewrite using subsasgn.
+
 2009-11-22  Michael Goffioul <michael.goffioul@gmail.com>
 
 	* plot/print.m: Properly set the default ghostscript_binary
